template/echo/base/cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: echo
