template/echo/base/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-lb
spec:
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: echo
