template/echo/base/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-np
spec:
  ports:
    - port: 5678
      targetPort: 5678
      nodePort: 30001
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: echo
