template/echo/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
spec:
  parentRefs:
  - name: gateway
    namespace: nginx-gateway
    sectionName: http
  hostnames: ["echo.jkdev.duckdns.org"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echo
      port: 5678
