template/echo/base/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: echo-tcp
  namespace: echo
spec:
  parentRefs:
  - name: gateway
    namespace: default
    sectionName: test
  rules:
  - backendRefs:
    - name: echo
      namespace: echo
      port: 5678
